--- a/asset/dashboard.css
+++ b/asset/dashboard.css
@@ -36,8 +36,8 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     /*position: fixed;*/
-    top: 51px;
-    bottom: 0;
+  /*  top: 51px;
+    bottom: 0;*/
     left: 0;
     z-index: 1000;
     display: block;
